// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/Pagination/MarkerBasedPagination should render properly with offset when hasNextMarker is false and hasPrevMarker is false 1`] = `
<MarkerBasedPagination
  hasNextMarker={false}
  hasPrevMarker={false}
  onMarkerBasedPageChange={[MockFunction]}
/>
`;

exports[`elements/Pagination/MarkerBasedPagination should render properly with offset when hasNextMarker is false and hasPrevMarker is true 1`] = `
<MarkerBasedPagination
  hasNextMarker={false}
  hasPrevMarker={true}
  onMarkerBasedPageChange={[MockFunction]}
>
  <PaginationControls
    handleNextClick={[Function]}
    handlePreviousClick={[Function]}
    hasNextPage={false}
    hasPreviousPage={true}
    isOffsetBasedPagination={false}
  >
    <div
      className="bdl-Pagination"
    >
      <ButtonGroup
        className="bdl-Pagination-nav"
      >
        <div
          className="btn-group bdl-Pagination-nav "
        >
          <Tooltip
            isDisabled={false}
            text={
              <FormattedMessage
                defaultMessage="Previous Page"
                id="be.pagination.previousPage"
              />
            }
          >
            <Tooltip
              constrainToScrollParent={false}
              constrainToWindow={true}
              isDisabled={false}
              position="top-center"
              text={
                <FormattedMessage
                  defaultMessage="Previous Page"
                  id="be.pagination.previousPage"
                />
              }
              theme="default"
            >
              <d
                attachment="bottom center"
                classPrefix="tooltip"
                constraints={
                  [
                    {
                      "attachment": "together",
                      "to": "window",
                    },
                  ]
                }
                renderElement={[Function]}
                renderElementTo={<body />}
                renderTarget={[Function]}
                targetAttachment="top center"
              >
                <div
                  className="bdl-Tooltip-target"
                >
                  <Button
                    className=""
                    isDisabled={false}
                    isLoading={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    showRadar={false}
                    tabIndex="0"
                    type="submit"
                  >
                    <button
                      className="btn"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      tabIndex="0"
                      type="submit"
                    >
                      <span
                        className="btn-content"
                      >
                        <IconPageBack
                          height={9}
                          width={6}
                        >
                          <AccessibleSVG
                            className="icon-page-back "
                            height={9}
                            viewBox="0 0 8 13"
                            width={6}
                          >
                            <svg
                              aria-hidden="true"
                              className="icon-page-back "
                              focusable="false"
                              height={9}
                              role="presentation"
                              viewBox="0 0 8 13"
                              width={6}
                            >
                              <path
                                className="fill-color"
                                d="M.1 11.3l4.6-4.5L.1 2.2 1.5.8l6 6-6 6-1.4-1.5z"
                                fill="#000000"
                                fillRule="evenodd"
                                transform="rotate(180 4 7)"
                              />
                            </svg>
                          </AccessibleSVG>
                        </IconPageBack>
                      </span>
                    </button>
                  </Button>
                </div>
              </d>
            </Tooltip>
          </Tooltip>
          <Tooltip
            isDisabled={true}
            text={
              <FormattedMessage
                defaultMessage="Next Page"
                id="be.pagination.nextPage"
              />
            }
          >
            <Button
              className=""
              isDisabled={true}
              isLoading={false}
              onClick={[Function]}
              showRadar={false}
              type="submit"
            >
              <button
                aria-disabled={true}
                className="btn is-disabled bdl-is-disabled"
                onClick={[Function]}
                type="submit"
              >
                <span
                  className="btn-content"
                >
                  <IconPageForward
                    height={9}
                    width={6}
                  >
                    <AccessibleSVG
                      className="icon-page-forward "
                      height={9}
                      viewBox="0 0 8 13"
                      width={6}
                    >
                      <svg
                        aria-hidden="true"
                        className="icon-page-forward "
                        focusable="false"
                        height={9}
                        role="presentation"
                        viewBox="0 0 8 13"
                        width={6}
                      >
                        <path
                          className="fill-color"
                          d="M.1 11.3l4.6-4.5L.1 2.2 1.5.8l6 6-6 6-1.4-1.5z"
                          fill="#000000"
                          fillRule="evenodd"
                        />
                      </svg>
                    </AccessibleSVG>
                  </IconPageForward>
                </span>
              </button>
            </Button>
          </Tooltip>
        </div>
      </ButtonGroup>
    </div>
  </PaginationControls>
</MarkerBasedPagination>
`;

exports[`elements/Pagination/MarkerBasedPagination should render properly with offset when hasNextMarker is true and hasPrevMarker is false 1`] = `
<MarkerBasedPagination
  hasNextMarker={true}
  hasPrevMarker={false}
  onMarkerBasedPageChange={[MockFunction]}
>
  <PaginationControls
    handleNextClick={[Function]}
    handlePreviousClick={[Function]}
    hasNextPage={true}
    hasPreviousPage={false}
    isOffsetBasedPagination={false}
  >
    <div
      className="bdl-Pagination"
    >
      <ButtonGroup
        className="bdl-Pagination-nav"
      >
        <div
          className="btn-group bdl-Pagination-nav "
        >
          <Tooltip
            isDisabled={true}
            text={
              <FormattedMessage
                defaultMessage="Previous Page"
                id="be.pagination.previousPage"
              />
            }
          >
            <Button
              className=""
              isDisabled={true}
              isLoading={false}
              onClick={[Function]}
              showRadar={false}
              type="submit"
            >
              <button
                aria-disabled={true}
                className="btn is-disabled bdl-is-disabled"
                onClick={[Function]}
                type="submit"
              >
                <span
                  className="btn-content"
                >
                  <IconPageBack
                    height={9}
                    width={6}
                  >
                    <AccessibleSVG
                      className="icon-page-back "
                      height={9}
                      viewBox="0 0 8 13"
                      width={6}
                    >
                      <svg
                        aria-hidden="true"
                        className="icon-page-back "
                        focusable="false"
                        height={9}
                        role="presentation"
                        viewBox="0 0 8 13"
                        width={6}
                      >
                        <path
                          className="fill-color"
                          d="M.1 11.3l4.6-4.5L.1 2.2 1.5.8l6 6-6 6-1.4-1.5z"
                          fill="#000000"
                          fillRule="evenodd"
                          transform="rotate(180 4 7)"
                        />
                      </svg>
                    </AccessibleSVG>
                  </IconPageBack>
                </span>
              </button>
            </Button>
          </Tooltip>
          <Tooltip
            isDisabled={false}
            text={
              <FormattedMessage
                defaultMessage="Next Page"
                id="be.pagination.nextPage"
              />
            }
          >
            <Tooltip
              constrainToScrollParent={false}
              constrainToWindow={true}
              isDisabled={false}
              position="top-center"
              text={
                <FormattedMessage
                  defaultMessage="Next Page"
                  id="be.pagination.nextPage"
                />
              }
              theme="default"
            >
              <d
                attachment="bottom center"
                classPrefix="tooltip"
                constraints={
                  [
                    {
                      "attachment": "together",
                      "to": "window",
                    },
                  ]
                }
                renderElement={[Function]}
                renderElementTo={<body />}
                renderTarget={[Function]}
                targetAttachment="top center"
              >
                <div
                  className="bdl-Tooltip-target"
                >
                  <Button
                    className=""
                    isDisabled={false}
                    isLoading={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    showRadar={false}
                    tabIndex="0"
                    type="submit"
                  >
                    <button
                      className="btn"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      tabIndex="0"
                      type="submit"
                    >
                      <span
                        className="btn-content"
                      >
                        <IconPageForward
                          height={9}
                          width={6}
                        >
                          <AccessibleSVG
                            className="icon-page-forward "
                            height={9}
                            viewBox="0 0 8 13"
                            width={6}
                          >
                            <svg
                              aria-hidden="true"
                              className="icon-page-forward "
                              focusable="false"
                              height={9}
                              role="presentation"
                              viewBox="0 0 8 13"
                              width={6}
                            >
                              <path
                                className="fill-color"
                                d="M.1 11.3l4.6-4.5L.1 2.2 1.5.8l6 6-6 6-1.4-1.5z"
                                fill="#000000"
                                fillRule="evenodd"
                              />
                            </svg>
                          </AccessibleSVG>
                        </IconPageForward>
                      </span>
                    </button>
                  </Button>
                </div>
              </d>
            </Tooltip>
          </Tooltip>
        </div>
      </ButtonGroup>
    </div>
  </PaginationControls>
</MarkerBasedPagination>
`;

exports[`elements/Pagination/MarkerBasedPagination should render properly with offset when hasNextMarker is true and hasPrevMarker is true 1`] = `
<MarkerBasedPagination
  hasNextMarker={true}
  hasPrevMarker={true}
  onMarkerBasedPageChange={[MockFunction]}
>
  <PaginationControls
    handleNextClick={[Function]}
    handlePreviousClick={[Function]}
    hasNextPage={true}
    hasPreviousPage={true}
    isOffsetBasedPagination={false}
  >
    <div
      className="bdl-Pagination"
    >
      <ButtonGroup
        className="bdl-Pagination-nav"
      >
        <div
          className="btn-group bdl-Pagination-nav "
        >
          <Tooltip
            isDisabled={false}
            text={
              <FormattedMessage
                defaultMessage="Previous Page"
                id="be.pagination.previousPage"
              />
            }
          >
            <Tooltip
              constrainToScrollParent={false}
              constrainToWindow={true}
              isDisabled={false}
              position="top-center"
              text={
                <FormattedMessage
                  defaultMessage="Previous Page"
                  id="be.pagination.previousPage"
                />
              }
              theme="default"
            >
              <d
                attachment="bottom center"
                classPrefix="tooltip"
                constraints={
                  [
                    {
                      "attachment": "together",
                      "to": "window",
                    },
                  ]
                }
                renderElement={[Function]}
                renderElementTo={<body />}
                renderTarget={[Function]}
                targetAttachment="top center"
              >
                <div
                  className="bdl-Tooltip-target"
                >
                  <Button
                    className=""
                    isDisabled={false}
                    isLoading={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    showRadar={false}
                    tabIndex="0"
                    type="submit"
                  >
                    <button
                      className="btn"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      tabIndex="0"
                      type="submit"
                    >
                      <span
                        className="btn-content"
                      >
                        <IconPageBack
                          height={9}
                          width={6}
                        >
                          <AccessibleSVG
                            className="icon-page-back "
                            height={9}
                            viewBox="0 0 8 13"
                            width={6}
                          >
                            <svg
                              aria-hidden="true"
                              className="icon-page-back "
                              focusable="false"
                              height={9}
                              role="presentation"
                              viewBox="0 0 8 13"
                              width={6}
                            >
                              <path
                                className="fill-color"
                                d="M.1 11.3l4.6-4.5L.1 2.2 1.5.8l6 6-6 6-1.4-1.5z"
                                fill="#000000"
                                fillRule="evenodd"
                                transform="rotate(180 4 7)"
                              />
                            </svg>
                          </AccessibleSVG>
                        </IconPageBack>
                      </span>
                    </button>
                  </Button>
                </div>
              </d>
            </Tooltip>
          </Tooltip>
          <Tooltip
            isDisabled={false}
            text={
              <FormattedMessage
                defaultMessage="Next Page"
                id="be.pagination.nextPage"
              />
            }
          >
            <Tooltip
              constrainToScrollParent={false}
              constrainToWindow={true}
              isDisabled={false}
              position="top-center"
              text={
                <FormattedMessage
                  defaultMessage="Next Page"
                  id="be.pagination.nextPage"
                />
              }
              theme="default"
            >
              <d
                attachment="bottom center"
                classPrefix="tooltip"
                constraints={
                  [
                    {
                      "attachment": "together",
                      "to": "window",
                    },
                  ]
                }
                renderElement={[Function]}
                renderElementTo={<body />}
                renderTarget={[Function]}
                targetAttachment="top center"
              >
                <div
                  className="bdl-Tooltip-target"
                >
                  <Button
                    className=""
                    isDisabled={false}
                    isLoading={false}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    showRadar={false}
                    tabIndex="0"
                    type="submit"
                  >
                    <button
                      className="btn"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      tabIndex="0"
                      type="submit"
                    >
                      <span
                        className="btn-content"
                      >
                        <IconPageForward
                          height={9}
                          width={6}
                        >
                          <AccessibleSVG
                            className="icon-page-forward "
                            height={9}
                            viewBox="0 0 8 13"
                            width={6}
                          >
                            <svg
                              aria-hidden="true"
                              className="icon-page-forward "
                              focusable="false"
                              height={9}
                              role="presentation"
                              viewBox="0 0 8 13"
                              width={6}
                            >
                              <path
                                className="fill-color"
                                d="M.1 11.3l4.6-4.5L.1 2.2 1.5.8l6 6-6 6-1.4-1.5z"
                                fill="#000000"
                                fillRule="evenodd"
                              />
                            </svg>
                          </AccessibleSVG>
                        </IconPageForward>
                      </span>
                    </button>
                  </Button>
                </div>
              </d>
            </Tooltip>
          </Tooltip>
        </div>
      </ButtonGroup>
    </div>
  </PaginationControls>
</MarkerBasedPagination>
`;
